# self-directed-training

./: .gitignore  CODEBASE_SUMMARY.md  README.md  SPEC_FUNCTIONS.md  azr.apply-selfplay.yaml  azr.apply-tools.yaml  azr.bootstrap.yaml  azr.files.yaml  azr.run-rl-selfplay.yaml  azr.run.yaml  azr.selfplay.impl.yaml  azr.symlink.yaml  azr.unsloth.yaml  collect_rollouts.py  opt_azr_params.py  pyproject.toml  pytest.ini  requirements.txt  rewards.py  rl_train_gspo.py  rl_train_gspo_selfplay.py  run_smoke.py  selfplay_manager.py  sft_train.py  tmp_cogito_standard.json  tmp_config.json  tmp_tiny_config.json  tool_harness.py  tool_loop.py
azr/: __init__.py  adapters.py  callbacks.py  cli.py  codegate.py  config.json  config.py  data.py  failure_logger.py  generation_logger.py  logging_io.py  modeling.py  openai_provider.py  opponent_provider_together.py  prompts_assist.py  rewards.py  sandbox.py  scoreboard.py  selfplay_manager.py  simple_rewards.py  tool_loop.py  trainer_overrides.py  training.py  training_selfplay.py  utils.py  vllm_launcher.py
azr.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
examples/: azr.params.yaml  sample_prompts.jsonl
scripts/: test_openai_teacher.py  test_opponent_responses.py
tests/: conftest.py  test_apply_tools_yaml.py  test_azr_rewards.py  test_bootstrap_yaml.py  test_cli.py  test_config.py  test_config_newshape.py  test_data.py  test_files_yaml.py  test_ia3.py  test_python_tool.py  test_rewards.py  test_run_yaml.py  test_sandbox_web.py  test_schema.py  test_selfplay.py  test_symlink_yaml.py  test_tool_harness.py  (+5 more)
(+42 files in other folders)
